--- a/flickr-client/package.json
+++ b/flickr-client/package.json
@@ -15,7 +15,7 @@
     "vite": "^5.0.11"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
